add bag of words vectorizer

--- a/main.ipynb
+++ b/main.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 153,
    "outputs": [
     {
      "name": "stdout",
@@ -376,10 +376,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 154,
    "outputs": [],
    "source": [
-    "countvectorizer = CountVectorizer(analyzer='word', stop_words='english')"
+    "# Bag-of-Words\n",
+    "count_vectorizer = CountVectorizer(analyzer='word', stop_words='english')\n",
+    "X_train = count_vectorizer.fit_transform(X_train).toarray()\n",
+    "X_test = count_vectorizer.transform(X_test).toarray()"
    ],
    "metadata": {
     "collapsed": false,
@@ -390,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 155,
    "outputs": [
     {
      "name": "stdout",
@@ -398,11 +401,11 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.97      1.00      0.98        98\n",
+      "           0       0.94      0.99      0.97        98\n",
       "           1       1.00      0.98      0.99        86\n",
-      "           2       0.97      0.99      0.98        77\n",
-      "           3       0.99      1.00      1.00       100\n",
-      "           4       0.99      0.95      0.97        84\n",
+      "           2       0.99      0.99      0.99        77\n",
+      "           3       0.98      1.00      0.99       100\n",
+      "           4       0.99      0.93      0.96        84\n",
       "\n",
       "    accuracy                           0.98       445\n",
       "   macro avg       0.98      0.98      0.98       445\n",
@@ -427,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 156,
    "outputs": [
     {
      "name": "stdout",
@@ -435,15 +438,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.99      0.94        98\n",
-      "           1       1.00      0.92      0.96        86\n",
-      "           2       0.99      0.96      0.97        77\n",
-      "           3       0.99      1.00      1.00       100\n",
-      "           4       0.98      0.94      0.96        84\n",
+      "           0       0.89      1.00      0.94        98\n",
+      "           1       0.99      0.91      0.95        86\n",
+      "           2       0.96      0.94      0.95        77\n",
+      "           3       0.97      1.00      0.99       100\n",
+      "           4       0.99      0.92      0.95        84\n",
       "\n",
       "    accuracy                           0.96       445\n",
-      "   macro avg       0.97      0.96      0.96       445\n",
-      "weighted avg       0.97      0.96      0.96       445\n",
+      "   macro avg       0.96      0.95      0.95       445\n",
+      "weighted avg       0.96      0.96      0.96       445\n",
       "\n"
      ]
     }
