add classifier loop

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,6 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
-    "from gensim.models import Word2Vec\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from wordcloud import WordCloud\n",
@@ -249,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "        category                                               text  \\\n0           tech  tv future in the hands of viewers with home th...   \n1       business  worldcom boss left books alone former worldcom...   \n2          sport  tigers wary of farrell gamble leicester say th...   \n3          sport  yeading face newcastle in fa cup premiership s...   \n4  entertainment  ocean s twelve raids box office ocean s twelve...   \n\n   word_count  \n0        4211  \n1        1786  \n2        1305  \n3        2103  \n4        1506  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>category</th>\n      <th>text</th>\n      <th>word_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>tech</td>\n      <td>tv future in the hands of viewers with home th...</td>\n      <td>4211</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>business</td>\n      <td>worldcom boss left books alone former worldcom...</td>\n      <td>1786</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>sport</td>\n      <td>tigers wary of farrell gamble leicester say th...</td>\n      <td>1305</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>sport</td>\n      <td>yeading face newcastle in fa cup premiership s...</td>\n      <td>2103</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>entertainment</td>\n      <td>ocean s twelve raids box office ocean s twelve...</td>\n      <td>1506</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -332,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "# TFIDF\n",
@@ -378,8 +377,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "outputs": [],
+   "execution_count": 20,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'lower'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [20]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Bag-of-Words\u001B[39;00m\n\u001B[0;32m      2\u001B[0m count_vectorizer \u001B[38;5;241m=\u001B[39m CountVectorizer(analyzer\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mword\u001B[39m\u001B[38;5;124m'\u001B[39m, stop_words\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124menglish\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m----> 3\u001B[0m X_train \u001B[38;5;241m=\u001B[39m \u001B[43mcount_vectorizer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfit_transform\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX_train\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mtoarray()\n\u001B[0;32m      4\u001B[0m X_test \u001B[38;5;241m=\u001B[39m count_vectorizer\u001B[38;5;241m.\u001B[39mtransform(X_test)\u001B[38;5;241m.\u001B[39mtoarray()\n",
+      "File \u001B[1;32mp:\\python_projects\\searchingsystems\\venv\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:1338\u001B[0m, in \u001B[0;36mCountVectorizer.fit_transform\u001B[1;34m(self, raw_documents, y)\u001B[0m\n\u001B[0;32m   1330\u001B[0m             warnings\u001B[38;5;241m.\u001B[39mwarn(\n\u001B[0;32m   1331\u001B[0m                 \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUpper case characters found in\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1332\u001B[0m                 \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m vocabulary while \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlowercase\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1333\u001B[0m                 \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m is True. These entries will not\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1334\u001B[0m                 \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m be matched with any documents\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1335\u001B[0m             )\n\u001B[0;32m   1336\u001B[0m             \u001B[38;5;28;01mbreak\u001B[39;00m\n\u001B[1;32m-> 1338\u001B[0m vocabulary, X \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_count_vocab\u001B[49m\u001B[43m(\u001B[49m\u001B[43mraw_documents\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfixed_vocabulary_\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1340\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbinary:\n\u001B[0;32m   1341\u001B[0m     X\u001B[38;5;241m.\u001B[39mdata\u001B[38;5;241m.\u001B[39mfill(\u001B[38;5;241m1\u001B[39m)\n",
+      "File \u001B[1;32mp:\\python_projects\\searchingsystems\\venv\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:1209\u001B[0m, in \u001B[0;36mCountVectorizer._count_vocab\u001B[1;34m(self, raw_documents, fixed_vocab)\u001B[0m\n\u001B[0;32m   1207\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m doc \u001B[38;5;129;01min\u001B[39;00m raw_documents:\n\u001B[0;32m   1208\u001B[0m     feature_counter \u001B[38;5;241m=\u001B[39m {}\n\u001B[1;32m-> 1209\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m feature \u001B[38;5;129;01min\u001B[39;00m \u001B[43manalyze\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdoc\u001B[49m\u001B[43m)\u001B[49m:\n\u001B[0;32m   1210\u001B[0m         \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m   1211\u001B[0m             feature_idx \u001B[38;5;241m=\u001B[39m vocabulary[feature]\n",
+      "File \u001B[1;32mp:\\python_projects\\searchingsystems\\venv\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:111\u001B[0m, in \u001B[0;36m_analyze\u001B[1;34m(doc, analyzer, tokenizer, ngrams, preprocessor, decoder, stop_words)\u001B[0m\n\u001B[0;32m    109\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    110\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m preprocessor \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m--> 111\u001B[0m         doc \u001B[38;5;241m=\u001B[39m \u001B[43mpreprocessor\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdoc\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    112\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m tokenizer \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m    113\u001B[0m         doc \u001B[38;5;241m=\u001B[39m tokenizer(doc)\n",
+      "File \u001B[1;32mp:\\python_projects\\searchingsystems\\venv\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:69\u001B[0m, in \u001B[0;36m_preprocess\u001B[1;34m(doc, accent_function, lower)\u001B[0m\n\u001B[0;32m     50\u001B[0m \u001B[38;5;124;03m\"\"\"Chain together an optional series of text preprocessing steps to\u001B[39;00m\n\u001B[0;32m     51\u001B[0m \u001B[38;5;124;03mapply to a document.\u001B[39;00m\n\u001B[0;32m     52\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     66\u001B[0m \u001B[38;5;124;03m    preprocessed string\u001B[39;00m\n\u001B[0;32m     67\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m     68\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m lower:\n\u001B[1;32m---> 69\u001B[0m     doc \u001B[38;5;241m=\u001B[39m \u001B[43mdoc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlower\u001B[49m()\n\u001B[0;32m     70\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m accent_function \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m     71\u001B[0m     doc \u001B[38;5;241m=\u001B[39m accent_function(doc)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'numpy.ndarray' object has no attribute 'lower'"
+     ]
+    }
+   ],
    "source": [
     "# Bag-of-Words\n",
     "count_vectorizer = CountVectorizer(analyzer='word', stop_words='english')\n",
@@ -395,102 +410,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jpawl\\AppData\\Local\\Temp\\ipykernel_6700\\3440495887.py:5: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  X_train_vect = np.array([np.array([w2v_model.wv[i] for i in ls if i in words]) for ls in X_train])\n",
+      "C:\\Users\\jpawl\\AppData\\Local\\Temp\\ipykernel_6700\\3440495887.py:6: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  X_test_vect = np.array([np.array([w2v_model.wv[i] for i in ls if i in words]) for ls in X_test])\n"
+     ]
+    }
+   ],
    "source": [
-    "# Word2Vec\n",
-    "word2vec_model = Word2Vec(min_count=1)"
+    "# TODO:\n",
+    "# Word2Vec"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "LogisticRegression\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.94      0.99      0.97        98\n",
+      "           0       0.97      1.00      0.98        98\n",
       "           1       1.00      0.98      0.99        86\n",
-      "           2       0.99      0.99      0.99        77\n",
-      "           3       0.98      1.00      0.99       100\n",
-      "           4       0.99      0.93      0.96        84\n",
+      "           2       0.97      0.99      0.98        77\n",
+      "           3       0.99      1.00      1.00       100\n",
+      "           4       0.99      0.95      0.97        84\n",
       "\n",
       "    accuracy                           0.98       445\n",
       "   macro avg       0.98      0.98      0.98       445\n",
       "weighted avg       0.98      0.98      0.98       445\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = LogisticRegression(multi_class=\"multinomial\")\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "print(classification_report(y_test,y_pred))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
+      "RandomForestClassifier\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      1.00      0.94        98\n",
-      "           1       0.99      0.91      0.95        86\n",
-      "           2       0.96      0.94      0.95        77\n",
-      "           3       0.97      1.00      0.99       100\n",
-      "           4       0.99      0.92      0.95        84\n",
+      "           0       0.91      0.98      0.94        98\n",
+      "           1       1.00      0.90      0.94        86\n",
+      "           2       0.91      0.96      0.94        77\n",
+      "           3       0.99      1.00      1.00       100\n",
+      "           4       0.99      0.94      0.96        84\n",
       "\n",
       "    accuracy                           0.96       445\n",
-      "   macro avg       0.96      0.95      0.95       445\n",
+      "   macro avg       0.96      0.96      0.96       445\n",
       "weighted avg       0.96      0.96      0.96       445\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = RandomForestClassifier()\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "print(classification_report(y_test,y_pred))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
+      "KNeighborsClassifier\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.95      0.98      0.96        98\n",
@@ -507,11 +485,17 @@
     }
    ],
    "source": [
-    "model = KNeighborsClassifier()\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
+    "lr_model = LogisticRegression(multi_class=\"multinomial\")\n",
+    "rf_model = RandomForestClassifier()\n",
+    "knn_model = KNeighborsClassifier()\n",
     "\n",
-    "print(classification_report(y_test,y_pred))"
+    "models = [lr_model, rf_model, knn_model]\n",
+    "\n",
+    "for model in models:\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    print(type(model).__name__)\n",
+    "    print(classification_report(y_test,y_pred))"
    ],
    "metadata": {
     "collapsed": false,
