--- a/main.ipynb
+++ b/main.ipynb
@@ -310,13 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 100,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4 0 3 ... 1 2 3]\n"
+      "[4 0 3]\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
     "\n",
     "label_encoder = LabelEncoder()\n",
     "y = label_encoder.fit_transform(y)\n",
-    "print(y)"
+    "print(y[:3])"
    ],
    "metadata": {
     "collapsed": false,
