--- a/main.ipynb
+++ b/main.ipynb
@@ -483,7 +483,47 @@
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "    print(type(model).__name__)\n",
-    "    print(classification_report(y_test,y_pred))"
+    "    print(classification_report(y_test,y_pred))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_20newsgroups"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "newsgroups_train = fetch_20newsgroups(subset='train')\n",
+    "from pprint import pprint\n",
+    "pprint(list(newsgroups_train.target_names))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
