fix nasz.csv. fix testing MLP on own dataset. Clean up code

--- a/old.ipynb
+++ b/old.ipynb
@@ -497,7 +497,21 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from sklearn.datasets import fetch_20newsgroups"
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "\n",
+    "def twenty_newsgroup_to_csv():\n",
+    "    newsgroups_train = fetch_20newsgroups(subset='train', remove=('headers', 'footers', 'quotes'))\n",
+    "\n",
+    "    df = pd.DataFrame([newsgroups_train.data, newsgroups_train.target.tolist()]).T\n",
+    "    df.columns = ['text', 'target']\n",
+    "\n",
+    "    targets = pd.DataFrame( newsgroups_train.target_names)\n",
+    "    targets.columns=['title']\n",
+    "\n",
+    "    out = pd.merge(df, targets, left_on='target', right_index=True)\n",
+    "    out['date'] = pd.to_datetime('now')\n",
+    "    out.to_csv('20_newsgroup.csv')\n",
+    "twenty_newsgroup_to_csv()"
    ],
    "metadata": {
     "collapsed": false,
@@ -511,19 +525,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "newsgroups_train = fetch_20newsgroups(subset='train')\n",
-    "from pprint import pprint\n",
-    "pprint(list(newsgroups_train.target_names))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "def upload_data():\n",
+    "    df = pd.read_csv('20_newsgroup.csv')\n",
+    "    out_df = pd.DataFrame(columns=[\"text\", \"category\"])\n",
+    "    out_df['text'] = df['text']\n",
+    "    out_df['category'] = df['title']\n",
+    "    out_df.to_csv('datasets/20_newsgroup.csv', index=False)\n",
+    "upload_data()"
    ],
    "metadata": {
     "collapsed": false,
