improve the nasz.csv dataset

--- a/new.ipynb
+++ b/new.ipynb
@@ -422,7 +422,7 @@
     "mlp_model.fit(X_train, y_train)\n",
     "y_pred = mlp_model.predict(X_test)\n",
     "print(type(mlp_model).__name__)\n",
-    "print(classification_report(y_test,y_pred))\n"
+    "print(classification_report(label_encoder.inverse_transform(y_test), label_encoder.inverse_transform(y_pred)))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -448,16 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "actual:\n",
-      "['rec.sport.hockey', 'talk.politics.guns', 'rec.sport.baseball']\n",
+      "['rec.sport.hockey', 'talk.politics.guns', 'rec.sport.baseball', 'comp.sys.ibm.pc.hardware', 'sci.electronics', 'rec.autos', 'talk.politics.misc', 'talk.religion.misc']\n",
       "predicted:\n",
-      "['rec.sport.hockey' 'talk.politics.guns' 'rec.sport.baseball']\n"
+      "['rec.sport.hockey' 'talk.politics.guns' 'rec.sport.baseball'\n",
+      " 'comp.sys.ibm.pc.hardware' 'sci.med' 'rec.autos' 'talk.politics.mideast'\n",
+      " 'talk.politics.mideast']\n"
      ]
     }
    ],
