improve classification report

--- a/new.ipynb
+++ b/new.ipynb
@@ -377,43 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MLPClassifier\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.65      0.64      0.65        81\n",
-      "           1       0.64      0.60      0.62       120\n",
-      "           2       0.60      0.65      0.63       130\n",
-      "           3       0.59      0.60      0.59       109\n",
-      "           4       0.76      0.72      0.74       134\n",
-      "           5       0.79      0.74      0.76       120\n",
-      "           6       0.74      0.76      0.75       111\n",
-      "           7       0.64      0.75      0.69       138\n",
-      "           8       0.77      0.68      0.72       120\n",
-      "           9       0.65      0.82      0.72       133\n",
-      "          10       0.89      0.79      0.84       130\n",
-      "          11       0.86      0.85      0.85       107\n",
-      "          12       0.63      0.71      0.67       118\n",
-      "          13       0.80      0.80      0.80        98\n",
-      "          14       0.85      0.73      0.79       120\n",
-      "          15       0.73      0.77      0.75       114\n",
-      "          16       0.79      0.73      0.76       121\n",
-      "          17       0.89      0.78      0.83       100\n",
-      "          18       0.62      0.71      0.66        89\n",
-      "          19       0.63      0.46      0.53        70\n",
-      "\n",
-      "    accuracy                           0.72      2263\n",
-      "   macro avg       0.72      0.71      0.72      2263\n",
-      "weighted avg       0.73      0.72      0.72      2263\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "mlp_model=MLPClassifier()\n",
@@ -427,7 +392,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
